--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
 
-@import 'primereact/resources/themes/lara-light-indigo/theme.css';
-@import 'primereact/resources/primereact.min.css';
-@import 'primeicons/primeicons.css';
+@import "primereact/resources/themes/lara-light-indigo/theme.css";
+@import "primereact/resources/primereact.min.css";
+@import "primeicons/primeicons.css";
 
-@import 'primereact/resources/themes/lara-light-indigo/theme.css';
-@import 'primereact/resources/primereact.min.css';
-@import 'primeicons/primeicons.css';
+@import "primereact/resources/themes/lara-light-indigo/theme.css";
+@import "primereact/resources/primereact.min.css";
+@import "primeicons/primeicons.css";
 
 @tailwind base;
 @tailwind components;
@@ -87,7 +87,7 @@
   }
 
   #world-clock {
-    @apply min-h-full bg-slate-50;
+    @apply min-h-full;
   }
 
   #world-clock svg {
@@ -112,7 +112,7 @@ div.timer-card {
 }
 
 .p-inputswitch.p-inputswitch-checked .p-inputswitch-slider {
-  background: theme('colors.secondaryColor') !important;
+  background: theme("colors.secondaryColor") !important;
 }
 
 #alarmComponent .add-button-container button svg {
@@ -120,7 +120,7 @@ div.timer-card {
 }
 
 #alarmComponent button:hover {
-  background: theme('colors.secondaryColor');
+  background: theme("colors.secondaryColor");
 }
 
 .add-alarm-dialog .am-pm {
@@ -141,8 +141,8 @@ div.timer-card {
 .p-togglebutton.p-button {
   padding: 0 !important;
   border-radius: 50%;
-  border: 1px solid theme('colors.primaryColor') !important;
-  color: theme('colors.primaryColor') !important;
+  border: 1px solid theme("colors.primaryColor") !important;
+  color: theme("colors.primaryColor") !important;
 }
 
 .p-dropdown.p-component {
@@ -162,12 +162,12 @@ div.timer-card {
 .p-dropdown:not(.p-disabled).p-focus {
   outline: 0 none;
   outline-offset: 0;
-  box-shadow: 0 0 0 0.2rem theme('colors.primaryLightColor');
-  border-color: theme('colors.primaryColor');
+  box-shadow: 0 0 0 0.2rem theme("colors.primaryLightColor");
+  border-color: theme("colors.primaryColor");
 }
 
 .p-dropdown:not(.p-disabled):hover {
-  border-color: theme('colors.primaryColor');
+  border-color: theme("colors.primaryColor");
 }
 
 .add-location-dialog button {
