--- a/src/index.css
+++ b/src/index.css
@@ -203,6 +203,11 @@ button.reset-stopwatch {
   @apply text-3xl bg-slate-300 shadow shadow-gray-600 hover:bg-slate-400 transition-all ease-out duration-300 rounded-full p-2;
 }
 
+.p-skeleton {
+  background-color: #dcdee0 !important;
+  border-radius: 6px;
+}
+
 @media (min-width: 320px) {
   .add-alarm-dialog,
   .add-location-dialog {
